# ml-reversible-data-hiding

./: .gitignore  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
datasets/: .gitkeep
ml-rdhei/: __main__.py
ml-rdhei/data/: __init__.py  loader.py
ml_rdhei/: .gitignore  __main__.py  data.py  model.py  models.py  run.py  train.py
ml_rdhei/compressor/: compress.py  encryption.py  hiding.py  huffman.py  models.py
ml_rdhei/data/: __init__.py  data.py  features.py  loader.py  results.txt  show.py  test.py
ml_rdhei/performence_metric/: results.py
ml_rdhei/predictor/: model.py  models.py  predict.py  test.py  train.py  trainK.py  train_sklearn.py
ml_rdhei/predictor/test-results/: sklearn_results.txt
ml_rdhei/receiver/: extraction.py  receive.py
ml_rdhei/ui/: app.py
