[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-rdhei"
version = "0.0.1"
dependencies = ["opencv-python>=4.12.0.88"]
authors = [
    { name = "Igor Sitko-Bajorski", email = "igorsitkobajorski@gmail.com" },
    { name = "changethis", email = "changethis@example.com" },
    { name = "changethis", email = "changethis@example.com" },
    { name = "changethis", email = "changethis@example.com" },
]
description = ""
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/guyv12/ml-reversible-data-hiding"
