[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-rdhei"
version = "0.0.1"
dependencies = ["opencv-python>=4.12.0.88", "numpy>=2.3.0"]
authors = [
    { name = "Igor Sitko-Bajorski", email = "igorsitkobajorski@gmail.com" },
    { name = "Konrad Machura", email = "konrad.machura44@gmail.com" },
    { name = "Jakub Wiśniewski", email = "kubawfcb@gmail.com" },
    { name = "Tobiasz Grzesik", email = "changethis@example.com" },
]
description = ""
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/guyv12/ml-reversible-data-hiding"
