[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_rdhei"
version = "0.0.1"
dependencies = ["torch", "torchvision", "numpy", "opencv-python", "scikit-learn", "scikit-image"]
requires-python = ">=3.13.0"
authors = [
    { name = "Igor Sitko-Bajorski", email = "igorsitkobajorski@gmail.com" },
    { name = "Konrad Machura", email = "konrad.machura44@gmail.com" },
    { name = "Jakub Wiśniewski", email = "kubawfcb@gmail.com" },
    { name = "Tobiasz Grzesik", email = "changethis@example.com" },
]
description = ""
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
]

[tool.setuptools]
packages = ["ml_rdhei"]

[project.urls]
Repository = "https://github.com/guyv12/ml-reversible-data-hiding"
